--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
     "start": "ng serve",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
-    "test": "ng test"
+    "test": "ng test",
+    "json-server": "node server.js", 
+    "servidor":"npx json-server-auth db.json"
   },
   "private": true,
   "dependencies": {
