--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
-    "json-server": "node server.js", 
-    "servidor":"npx json-server-auth db.json"
+    "json-server": "node server.js",
+    "servidor": "npx json-server-auth db.json"
   },
   "private": true,
   "dependencies": {
@@ -20,6 +20,7 @@
     "@angular/platform-browser": "^18.2.0",
     "@angular/platform-browser-dynamic": "^18.2.0",
     "@angular/router": "^18.2.0",
+    "@fortawesome/fontawesome-free": "^6.6.0",
     "bcryptjs": "^2.4.3",
     "daisyui": "^4.12.13",
     "rxjs": "~7.8.0",
