--- a/package.json
+++ b/package.json
@@ -27,6 +27,9 @@
     "tslib": "^2.3.0",
     "zone.js": "~0.14.10"
   },
+  "optionalDependencies": {
+  "@rollup/rollup-linux-x64-gnu": "4.35.0"
+},
   "devDependencies": {
     "@angular-devkit/build-angular": "^18.2.7",
     "@angular/cli": "^18.2.7",
